--- a/models-order/public/1.53.0/merge-order.yaml
+++ b/models-order/public/1.53.0/merge-order.yaml
@@ -1,6 +1,7 @@
 merge_order:
   - llama-3.3-instruct.yaml
   - riva-asr-whisper-large-v3.yaml
+  - riva-asr-canary-1b.yaml
   - deepseek-r1-distill-llama.yaml
   - starcoder-2.yaml
   - llama-3.3-nemotron-super-49b-v1.yaml
@@ -11,7 +12,11 @@ merge_order:
   - mistral-instruct.yaml
   - mixtral-instruct.yaml
   - nemoretriever-parse.yaml
+  - nemoretriever-graphic-elements-v1.yaml
+  - nemoretriever-page-elements-v2.yaml
+  - nemoretriever-table-structure-v1.yaml
   - llama-3.2-nv-embedqa-v2.yaml
   - llama-3.2-nv-rerankqa-v2.yaml
   - gemma-2.yaml
   - llama-3-sqlcoder-8b.yaml
+  - paddleocr.yaml
