--- a/models/public/1.52.0/gemma-2.yaml
+++ b/models/public/1.52.0/gemma-2.yaml
@@ -23,6 +23,9 @@ models:
           framework: vllm
           sha: vllm
           modelFormat: vllm
+          hfMetadata:
+            gpu: A10G
+            count: 1
           spec:
           - key: GPU
             value: A10G
@@ -33,6 +36,9 @@ models:
           framework: vllm
           sha: vllm
           modelFormat: vllm
+          hfMetadata:
+            gpu: A100
+            count: 1
           spec:
           - key: GPU
             value: A100
@@ -43,6 +49,9 @@ models:
           framework: vllm
           sha: vllm
           modelFormat: vllm
+          hfMetadata:
+            gpu: L40S
+            count: 1
           spec:
           - key: GPU
             value: L40S
