--- a/models-order/public/1.53.0/merge-order.yaml
+++ b/models-order/public/1.53.0/merge-order.yaml
@@ -9,6 +9,8 @@ merge_order:
   - llama-3.2-vision-instruct.yaml
   - llama-3.1-nemotron-nano-v1.yaml
   - llama-3.1-instruct.yaml
+  - boltz2.yaml
+  - gpt-oss.yaml
   - mistral-instruct.yaml
   - mixtral-instruct.yaml
   - nemoretriever-parse.yaml
