--- a/manifests/1.9.0/nim/nvidia/whisper-large-v3.yaml
+++ b/manifests/1.9.0/nim/nvidia/whisper-large-v3.yaml
@@ -1,110 +1,8 @@
 schema_version: '2.0'
 profile_selection_criteria: auto
-model: nvidia/riva-speech
-release: 1.3.0
+model: nvidia/riva-asr/whisper # fixed by cloudera; was: `openai/whisper-large-v3`
+release: 1.3.1
 profiles:
-- id: 16a656515cfd4ab498d696998fc63d3842e7d71b187a5099248e503d7be4e417
-  tags:
-    mode: all
-    model_type: rmir
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-1.1b_en_us-offline.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-ofl_rmir_24.12?file=asr-parakeet-1.1b_en_us-offline.rmir
-      asr-parakeet-1.1b_en_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str-thr_rmir_24.12?file=asr-parakeet-1.1b_en_us-streaming-throughput.rmir
-      asr-parakeet-1.1b_en_us-streaming.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str_rmir_24.12?file=asr-parakeet-1.1b_en_us-streaming.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: 1b4bc8859a406f6e09b4c91a1544e0e09c7f0c44de6580d27b61797e4c7d4e26
-  tags:
-    mode: str-thr
-    model_type: rmir
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr-conformer_es_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str-thr_rmir_24.12?file=asr-conformer_es_us-streaming-throughput.rmir
-      nlp_punctuation_bert_base_es_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_rmir_24.12?file=nlp_punctuation_bert_base_es_us.rmir
-- id: 2c27c4a467f54d13ef68f8de6a8d047175b19697f0cf0650b3c2a64e1138128d
-  tags:
-    mode: ofl
-    model_type: rmir
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-0.6b_en_us-offline.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-ofl_rmir_24.12?file=asr-parakeet-0.6b_en_us-offline.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: 301ee11e84e90353e3554039122788a756c2f73beeafe226cdb85b7506553bdb
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: str
-    model_type: prebuilt
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_0.6b_en-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str_a100x1_24.12?file=asr_parakeet_0.6b_en-US_streaming_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: 3920ecb7369f4f68aeb7ae2fcd0f5b95d1272facb1c42c7b6207a0e9696b0ad2
-  tags:
-    mode: all
-    model_type: rmir
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-0.6b_en_us-offline.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-ofl_rmir_24.12?file=asr-parakeet-0.6b_en_us-offline.rmir
-      asr-parakeet-0.6b_en_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str-thr_rmir_24.12?file=asr-parakeet-0.6b_en_us-streaming-throughput.rmir
-      asr-parakeet-0.6b_en_us-streaming.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str_rmir_24.12?file=asr-parakeet-0.6b_en_us-streaming.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: 3d5625ebe590f898903871dff5362ab15c9d957f269438efb33166d35a474f30
-  tags:
-    mode: all
-    model_type: rmir
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr-conformer_es_us-offline.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-ofl_rmir_24.12?file=asr-conformer_es_us-offline.rmir
-      asr-conformer_es_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str-thr_rmir_24.12?file=asr-conformer_es_us-streaming-throughput.rmir
-      asr-conformer_es_us-streaming.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str_rmir_24.12?file=asr-conformer_es_us-streaming.rmir
-      nlp_punctuation_bert_base_es_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_rmir_24.12?file=nlp_punctuation_bert_base_es_us.rmir
-- id: 3e640cf9e08a1369e7448a486777a9882329650384dbfec0bef53f049eb04bc8
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: ofl
-    model_type: prebuilt
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_0.6b_en-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-ofl_a100x1_24.12?file=asr_parakeet_0.6b_en-US_offline_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: 3ef04bf1621561955c66dcd76b961eff0b318536de1cbd6512c0f60b39f9275b
-  tags:
-    mode: ofl
-    model_type: prebuilt
-    name: canary-1b
-  workspace:
-    files:
-      asr-canary-1b-offline.tar.gz:
-        uri: ngc://nim/nvidia/canary-1b:ofl_generic_24.12?file=asr-canary-1b-offline.tar.gz
 - id: 5e44fa6d8cd80ad46a089089157ff4565974f0a64fd37c594265c61f00418ae0
   tags:
     mode: ofl
@@ -112,239 +10,19 @@ profiles:
     name: whisper-large-v3
   workspace:
     files:
-      asr-whisper-large-v3-offline.rmir:
-        uri: ngc://nim/nvidia/whisper-large-v3:ofl_rmir_24.12?file=asr-whisper-large-v3-offline.rmir
-- id: 70b8a5e50e8873e916d51ea04f6aa70fc208acaf4064fb31c7ecd2ead77c38da
+      whisper-large-v3-ofl-rmir-25.06/asr-whisper-large-v3-multi-offline-trtllm.rmir:
+        uri: ngc://nim/nvidia/whisper-large-v3:ofl-rmir-25.06?file=asr-whisper-large-v3-multi-offline-trtllm.rmir
+- id: 72232937075119887298deb92b5e58f4d98a0ce0948df60d424f0d97b05da55e
   tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: ofl
-    model_type: prebuilt
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_1.1b_en-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-ofl_a100x1_24.12?file=asr_parakeet_1.1b_en-US_offline_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: 7669967e54028fbd27e51810b687c1a96a0b8695386f449f81d969b8a1423905
-  tags:
-    mode: ofl
-    model_type: rmir
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr-conformer_es_us-offline.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-ofl_rmir_24.12?file=asr-conformer_es_us-offline.rmir
-      nlp_punctuation_bert_base_es_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_rmir_24.12?file=nlp_punctuation_bert_base_es_us.rmir
-- id: 8376ca3fe642072706ad46b0954820449bd04b0aad48520307f66b1487cf9d28
-  tags:
-    mode: str
-    model_type: rmir
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-1.1b_en_us-streaming.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str_rmir_24.12?file=asr-parakeet-1.1b_en_us-streaming.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: 89d1964dda08c4e3e2cae436fe09e5dd8ef2bca452aad52cf26334e39dfe7358
-  tags:
-    gpu_device: 2331:10de
-    mode: str-thr
-    model_type: prebuilt
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr_conformer_es-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str-thr_h100x1_24.12?file=asr_conformer_es-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-es-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_h100x1_24.12?file=nlp_punctuation-es-US.tar.gz
-- id: 8c172988299637c407edce167b77ba626bc629dfa4e7a96cadc8676af33e6d04
-  tags:
-    gpu_device: 2331:10de
-    mode: str
-    model_type: prebuilt
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr_conformer_es-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str_h100x1_24.12?file=asr_conformer_es-US_streaming_flashlight.tar.gz
-      nlp_punctuation-es-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_h100x1_24.12?file=nlp_punctuation-es-US.tar.gz
-- id: 94e4f9422418e2562160518e041114132144e2124eff31610f4635b3875737b4
-  tags:
-    mode: ofl
-    model_type: prebuilt
-    name: canary-0-6b-turbo
-  workspace:
-    files:
-      asr-canary-0.6b-turbo-offline.tar.gz:
-        uri: ngc://nim/nvidia/canary-0-6b-turbo:ofl_generic_24.12?file=asr-canary-0.6b-turbo-offline.tar.gz
-- id: a3d27ffaa57d32fff983fe6991e2b92b2a46b368244d95ec8e3ebd10abfcdc1c
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: str
-    model_type: prebuilt
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_1.1b_en-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str_a100x1_24.12?file=asr_parakeet_1.1b_en-US_streaming_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: adbff415b5d1eb6f9bcbd986d50cd0b5215fa80c4d45bc5fd3695149f1518a9f
-  tags:
-    mode: ofl
-    model_type: rmir
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-1.1b_en_us-offline.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-ofl_rmir_24.12?file=asr-parakeet-1.1b_en_us-offline.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: af97029e733095a937ac19e86e586e4a4e2042e1019866dc031e629c7a875fb2
-  tags:
-    gpu_device: 2331:10de
+    gpu_device: '2330'
     mode: ofl
     model_type: prebuilt
     name: whisper-large-v3
   workspace:
     files:
-      asr-whisper-large-v3-offline.tar.gz:
-        uri: ngc://nim/nvidia/whisper-large-v3:ofl_h100x1_24.12?file=asr-whisper-large-v3-offline.tar.gz
-- id: c32357897c17208feac19958377baac8b92f452e88a562c83c57f02111a9d892
-  tags:
-    mode: str
-    model_type: rmir
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr-conformer_es_us-streaming.rmir:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str_rmir_24.12?file=asr-conformer_es_us-streaming.rmir
-      nlp_punctuation_bert_base_es_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_rmir_24.12?file=nlp_punctuation_bert_base_es_us.rmir
-- id: c5874066771056e52f882f39216c2dbfb448329199cc1ebb7238e3a1f72f4701
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: str-thr
-    model_type: prebuilt
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_0.6b_en-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str-thr_a100x1_24.12?file=asr_parakeet_0.6b_en-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: c9a68c20c3c6318b6c0bd08388b09fbf377d1705edc1500683a25b9c8b2f708a
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: all
-    model_type: prebuilt
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_0.6b_en-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-ofl_a100x1_24.12?file=asr_parakeet_0.6b_en-US_offline_flashlight.tar.gz
-      asr_parakeet_0.6b_en-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str_a100x1_24.12?file=asr_parakeet_0.6b_en-US_streaming_flashlight.tar.gz
-      asr_parakeet_0.6b_en-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str-thr_a100x1_24.12?file=asr_parakeet_0.6b_en-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: d32b5690ee1290e3ba2da9b0a38be48cebbf1aa2904e49aaad4274811a5a165b
-  tags:
-    mode: str-thr
-    model_type: rmir
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-1.1b_en_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str-thr_rmir_24.12?file=asr-parakeet-1.1b_en_us-streaming-throughput.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: e493c4262678511b2fb97375dbbab5d8904d054968b6123bac6aa22ae34c1cb0
-  tags:
-    mode: str-thr
-    model_type: rmir
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-0.6b_en_us-streaming-throughput.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str-thr_rmir_24.12?file=asr-parakeet-0.6b_en_us-streaming-throughput.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: ec3b642c3ff86c9cd83f66429ccad4e44267b05aeed8fb9296442a27ecfedd7e
-  tags:
-    gpu_device: 2331:10de
-    mode: all
-    model_type: prebuilt
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr_conformer_es-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-ofl_h100x1_24.12?file=asr_conformer_es-US_offline_flashlight.tar.gz
-      asr_conformer_es-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str_h100x1_24.12?file=asr_conformer_es-US_streaming_flashlight.tar.gz
-      asr_conformer_es-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-str-thr_h100x1_24.12?file=asr_conformer_es-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-es-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_h100x1_24.12?file=nlp_punctuation-es-US.tar.gz
-- id: f0d0a63a5f6cb59161d1b082db7893a309df7f2a26a7860df4fb41807433ac9f
-  tags:
-    gpu_device: 2331:10de
-    mode: ofl
-    model_type: prebuilt
-    name: conformer-ctc-riva-es-us
-  workspace:
-    files:
-      asr_conformer_es-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/conformer-ctc-riva:es-us-ofl_h100x1_24.12?file=asr_conformer_es-US_offline_flashlight.tar.gz
-      nlp_punctuation-es-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:es-us_h100x1_24.12?file=nlp_punctuation-es-US.tar.gz
-- id: f273a26b332ff679de8c05ea16fe789b5a14fdf50c7ca122f46dee432eff3ffa
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: all
-    model_type: prebuilt
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_1.1b_en-US_offline_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-ofl_a100x1_24.12?file=asr_parakeet_1.1b_en-US_offline_flashlight.tar.gz
-      asr_parakeet_1.1b_en-US_streaming_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str_a100x1_24.12?file=asr_parakeet_1.1b_en-US_streaming_flashlight.tar.gz
-      asr_parakeet_1.1b_en-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str-thr_a100x1_24.12?file=asr_parakeet_1.1b_en-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
-- id: f3ca3b2cf75bf0f55acbc32e400aeef33ad61de70ad430f37334e0ef025b2877
-  tags:
-    mode: str
-    model_type: rmir
-    name: parakeet-0-6b-ctc-riva-en-us
-  workspace:
-    files:
-      asr-parakeet-0.6b_en_us-streaming.rmir:
-        uri: ngc://nim/nvidia/parakeet-0-6b-ctc-riva:en-us-str_rmir_24.12?file=asr-parakeet-0.6b_en_us-streaming.rmir
-      nlp_punctuation_bert_base_en_us.rmir:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_rmir_24.12?file=nlp_punctuation_bert_base_en_us.rmir
-- id: fff6608ba7a4f03e501b05a992b54ca0086557fab13b2ba4a286c7e2a47d2e88
-  tags:
-    ampereplus: yes
-    gpu_device: 20b2:10de
-    mode: str-thr
-    model_type: prebuilt
-    name: parakeet-1-1b-ctc-riva-en-us
-  workspace:
-    files:
-      asr_parakeet_1.1b_en-US_streaming_throughput_flashlight.tar.gz:
-        uri: ngc://nim/nvidia/parakeet-1-1b-ctc-riva:en-us-str-thr_a100x1_24.12?file=asr_parakeet_1.1b_en-US_streaming_throughput_flashlight.tar.gz
-      nlp_punctuation-en-US.tar.gz:
-        uri: ngc://nim/nvidia/punctuation-riva:en-us_a100x1_24.12?file=nlp_punctuation-en-US.tar.gz
+      whisper-large-v3-h100x1-ofl-25.08-fp16-mnz4pnn0pw/asr-whisper-large-v3-multi-offline-trtllm.tar.gz:
+        uri: ngc://nim/nvidia/whisper-large-v3:h100x1-ofl-25.08-fp16-mnz4pnn0pw?file=asr-whisper-large-v3-multi-offline-trtllm.tar.gz
+      whisper-large-v3-h100x1-ofl-25.08-fp16-mnz4pnn0pw/checksums.blake3:
+        uri: ngc://nim/nvidia/whisper-large-v3:h100x1-ofl-25.08-fp16-mnz4pnn0pw?file=checksums.blake3
+      whisper-large-v3-h100x1-ofl-25.08-fp16-mnz4pnn0pw/metadata.json:
+        uri: ngc://nim/nvidia/whisper-large-v3:h100x1-ofl-25.08-fp16-mnz4pnn0pw?file=metadata.json
