--- a/models/public/gemma-2.yaml
+++ b/models/public/gemma-2.yaml
@@ -19,16 +19,34 @@ models:
           url: https://ai.google.dev/gemma/prohibited_use_policy
         optimizationProfiles:
         - profileId: google/gemma-2-9b
-          displayName: Gemma 2 9b
+          displayName: Gemma 2 9b A10G
           framework: vllm
           sha: vllm
           modelFormat: vllm
           spec:
-          - key: A10G
-            value: 2
-          - key: A100
+          - key: GPU
+            value: A10G
+          - key: COUNT
             value: 1
-          - key: L40S
+        - profileId: google/gemma-2-9b
+          displayName: Gemma 2 A100
+          framework: vllm
+          sha: vllm
+          modelFormat: vllm
+          spec:
+          - key: GPU
+            value: A100
+          - key: COUNT
+            value: 1
+        - profileId: google/gemma-2-9b
+          displayName: Gemma 2 9b L40S
+          framework: vllm
+          sha: vllm
+          modelFormat: vllm
+          spec:
+          - key: GPU
+            value: L40S
+          - key: COUNT
             value: 1
     labels:
       - google
